--- a/contact.html
+++ b/contact.html
@@ -3,3 +3,50 @@
 
 <head>
   <meta charset="UTF-8">
+  <title>Contact</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+   
+<body>
+ <div class="container">
+    <header>
+    <div class="margin">
+      <h1>Aaron Davis</h1>
+       
+      <div class="topnav">
+        <ul>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a class="actve" href="#contact">Contact</a></li>
+          <li><a href="#about">About</a></li>
+        </ul>
+      </div>
+    
+    </header>
+<br>
+<div id="content">
+ <section class="clearfix">  
+<h2>Contact Me</h2>
+<form action="action_page.php">
+
+    <label for="fname">Name</label><br>
+    <input type="text" id="fname" name="fullname" placeholder="Your full name..">
+<br>
+    <label for="email">Email</label><br>
+    <input type="text" id="email" name="emailaddress" placeholder="Your email address..">
+<br>
+
+    <label for="message">Message</label><br>
+    <textarea id="message" name="message" placeholder="Write your message.." style="height:200px"></textarea>
+<br>
+<br>
+    <input type="submit" value="Submit">
+</section>
+</div>
+  </form>
+</div>
+</div>
+<div class="footer">
+  <p>Copyright</p>
+        </div>
+
+</body>
