--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
        
       <div class="topnav">
         <ul>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a class="active" href="#about">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a class="active" href="index.html">About</a></li>
         </ul>
       </div>
     </div>
@@ -43,11 +43,7 @@
       I pick my choice, squeaky clean. Major key, don’t fall for the trap, stay focused. It’s the ones closest to you that want to see you fail. 
       The key to more success is to have a lot of pillows. You do know, you do know that they don’t want you to have lunch. I’m keeping it real with you, so what you going do is have lunch.
     </p>
-    <p>Watch your back, but more importantly when you get out the shower, dry your back, it’s a cold world out there. 
-      Surround yourself with angels, positive energy, beautiful people, beautiful souls, clean heart, angel. The key is to drink coconut, fresh coconut, trust me. 
-      I’m up to something. To succeed you must believe. When you believe, you will succeed. The key is to enjoy life, because they don’t want you to enjoy life. 
-      I promise you, they don’t want you to jetski, they don’t want you to smile.
-      </p>
+   
     </section>
 
 </div>
